--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':rxjava2', ':alibabamqtt', ':downloaddemo', ':db-demo'
+include ':rxjava2', ':alibabamqtt', ':downloaddemo', ':db-demo', ':io-demo'
