1. 照搬google ApiDemos的遍历Activity的方法

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':rxjava2', ':alibabamqtt', ':downloaddemo', ':db-demo', ':io-demo'
+include ':rxjava2', ':alibabamqtt', ':downloaddemo', ':db-demo', ':io-demo', ':animator-demo'
